add budget meeting

--- a/videos.yaml
+++ b/videos.yaml
@@ -1,2 +1,3 @@
 Comp Planning Review Session January 23, 2019: https://youtu.be/btDyfdLk9go
 Comp Planning Review Session January 30, 2019: https://youtu.be/ZwWh7a0SKRM
+Trustees Budget Meeting January 31, 2019: https://youtu.be/TxbypeGBgq0
