Add new video comp plan feb 20

--- a/videos.yaml
+++ b/videos.yaml
@@ -1,3 +1,4 @@
 Comp Planning Review Session January 23, 2019: https://youtu.be/btDyfdLk9go
 Comp Planning Review Session January 30, 2019: https://youtu.be/ZwWh7a0SKRM
 Trustees Budget Meeting January 31, 2019: https://youtu.be/TxbypeGBgq0
+Comp Plan Update Committee Meeting February 20, 2019: https://youtu.be/2Qo8_9tkMik
