--- a/videos.yaml
+++ b/videos.yaml
@@ -3,3 +3,4 @@ Comp Planning Review Session January 30, 2019: https://youtu.be/ZwWh7a0SKRM
 Trustees Budget Meeting January 31, 2019: https://youtu.be/TxbypeGBgq0
 Comp Plan Update Committee Meeting February 20, 2019: https://youtu.be/2Qo8_9tkMik
 Trustees Budget Meeting March 21, 2019: https://youtu.be/HVIGLFRliTM
+Trustees Budget Meeting March 28, 2019: https://youtu.be/HZpbqdaV7XM
