--- a/videos.yaml
+++ b/videos.yaml
@@ -5,3 +5,5 @@ Comp Plan Update Committee Meeting February 20, 2019: https://youtu.be/2Qo8_9tkM
 Trustees Budget Meeting March 21, 2019: https://youtu.be/HVIGLFRliTM
 Trustees Budget Meeting March 28, 2019: https://youtu.be/HZpbqdaV7XM
 Trustees Budget Meeting April 2, 2019: https://youtu.be/traTKcrKO1s
+Trustees Code Review April 9, 2019: https://youtu.be/EYjItLXEIgM
+Trustees Meeting: https://youtu.be/WOdRfF_xdDw
