--- a/videos.yaml
+++ b/videos.yaml
@@ -6,4 +6,4 @@ Trustees Budget Meeting March 21, 2019: https://youtu.be/HVIGLFRliTM
 Trustees Budget Meeting March 28, 2019: https://youtu.be/HZpbqdaV7XM
 Trustees Budget Meeting April 2, 2019: https://youtu.be/traTKcrKO1s
 Trustees Code Review April 9, 2019: https://youtu.be/EYjItLXEIgM
-Trustees Meeting: https://youtu.be/WOdRfF_xdDw
+Trustees Meeting April 9, 2019: https://youtu.be/WOdRfF_xdDw
