--- a/videos.yaml
+++ b/videos.yaml
@@ -2,6 +2,8 @@ Comp Planning Review Session January 23, 2019: https://youtu.be/btDyfdLk9go
 Comp Planning Review Session January 30, 2019: https://youtu.be/ZwWh7a0SKRM
 Trustees Budget Meeting January 31, 2019: https://youtu.be/TxbypeGBgq0
 Comp Plan Update Committee Meeting February 20, 2019: https://youtu.be/2Qo8_9tkMik
+Code Review Meeting February 26, 2019: https://youtu.be/6FJWbJPYuHU
+Trustees Meeting February 26, 2019: https://youtu.be/7vPsfAIBK8k
 Trustees Budget Meeting March 21, 2019: https://youtu.be/HVIGLFRliTM
 Trustees Budget Meeting March 28, 2019: https://youtu.be/HZpbqdaV7XM
 Trustees Budget Meeting April 2, 2019: https://youtu.be/traTKcrKO1s
