Add three new videos

--- a/videos.yaml
+++ b/videos.yaml
@@ -9,3 +9,6 @@ Trustees Budget Meeting March 28, 2019: https://youtu.be/HZpbqdaV7XM
 Trustees Budget Meeting April 2, 2019: https://youtu.be/traTKcrKO1s
 Trustees Code Review April 9, 2019: https://youtu.be/EYjItLXEIgM
 Trustees Meeting April 9, 2019: https://youtu.be/WOdRfF_xdDw
+Village Board Special Meeting April 16th, 2019: https://youtu.be/PLLan9MDRK4
+Code Review Workshop April 23rd 2019: https://youtu.be/D5tUu5JnT7o
+Trustees Meeting April 23rd 2019: https://youtu.be/Q7Wrr6Mtpt4
