Add April 30 video

--- a/videos.yaml
+++ b/videos.yaml
@@ -12,3 +12,4 @@ Trustees Meeting April 9, 2019: https://youtu.be/WOdRfF_xdDw
 Village Board Special Meeting April 16th, 2019: https://youtu.be/PLLan9MDRK4
 Code Review Workshop April 23rd 2019: https://youtu.be/D5tUu5JnT7o
 Trustees Meeting April 23rd 2019: https://youtu.be/Q7Wrr6Mtpt4
+Village Board Special Meeting April 30th 2019: https://youtu.be/-R8Yp78FT68
