--- a/videos.yaml
+++ b/videos.yaml
@@ -15,3 +15,5 @@ Trustees Meeting April 23rd 2019: https://youtu.be/Q7Wrr6Mtpt4
 Village Board Special Meeting April 30th 2019: https://youtu.be/-R8Yp78FT68
 Comprehensive Plan Update Committee Meeting May 8th, 2019: https://youtu.be/p1iBzVu6J2c
 Code Review Workshop May 9, 2019: https://youtu.be/ZjuXNxJpAKk
+Code Review Workshop May 14th, 2019: https://youtu.be/qIKxGn91xiE
+Trustees Meeting May 14th, 2019: https://youtu.be/RbDEqCEI65A
