--- a/videos.yaml
+++ b/videos.yaml
@@ -17,3 +17,7 @@ Comprehensive Plan Update Committee Meeting May 8th, 2019: https://youtu.be/p1iB
 Code Review Workshop May 9, 2019: https://youtu.be/ZjuXNxJpAKk
 Code Review Workshop May 14th, 2019: https://youtu.be/qIKxGn91xiE
 Trustees Meeting May 14th, 2019: https://youtu.be/RbDEqCEI65A
+Code Review Workshop May 20, 2019: https://youtu.be/sG_ru7nbQuM
+75 Monroe Public Meeting May 22: https://youtu.be/hJU9hl66pQ0
+Code Review Meeting May 28, 2019: https://youtu.be/QjiWnN3317s
+Trustees Meeting May 28, 2019: https://youtu.be/HFugvqV2A9Y
