--- a/videos.yaml
+++ b/videos.yaml
@@ -21,3 +21,4 @@ Code Review Workshop May 20, 2019: https://youtu.be/sG_ru7nbQuM
 75 Monroe Public Meeting May 22: https://youtu.be/hJU9hl66pQ0
 Code Review Meeting May 28, 2019: https://youtu.be/QjiWnN3317s
 Trustees Meeting May 28, 2019: https://youtu.be/HFugvqV2A9Y
+Village Board Special / Code Review Meeting June 1, 2019: https://www.youtube.com/watch?v=urJbqBFviYI
