Add code review

--- a/videos.yaml
+++ b/videos.yaml
@@ -22,3 +22,4 @@ Code Review Workshop May 20, 2019: https://youtu.be/sG_ru7nbQuM
 Code Review Meeting May 28, 2019: https://youtu.be/QjiWnN3317s
 Trustees Meeting May 28, 2019: https://youtu.be/HFugvqV2A9Y
 Village Board Special / Code Review Meeting June 1, 2019: https://www.youtube.com/watch?v=urJbqBFviYI
+Code Review Workshop June 11, 2019: https://youtu.be/UEJBjPktcRs
