--- a/videos.yaml
+++ b/videos.yaml
@@ -23,3 +23,5 @@ Code Review Meeting May 28, 2019: https://youtu.be/QjiWnN3317s
 Trustees Meeting May 28, 2019: https://youtu.be/HFugvqV2A9Y
 Village Board Special / Code Review Meeting June 1, 2019: https://www.youtube.com/watch?v=urJbqBFviYI
 Code Review Workshop June 11, 2019: https://youtu.be/UEJBjPktcRs
+Comp Plan Public Meeting June 24, 2019: https://youtu.be/xyq34-TlhTQ
+Trustees Special & Board Meeting June 25, 2019: https://youtu.be/1cu1YqGeQYo
