Add Trustees meeting July 3

--- a/videos.yaml
+++ b/videos.yaml
@@ -25,3 +25,4 @@ Village Board Special / Code Review Meeting June 1, 2019: https://www.youtube.co
 Code Review Workshop June 11, 2019: https://youtu.be/UEJBjPktcRs
 Comp Plan Public Meeting June 24, 2019: https://youtu.be/xyq34-TlhTQ
 Trustees Special & Board Meeting June 25, 2019: https://youtu.be/1cu1YqGeQYo
+Trustees Meeting July 2, 2019: https://youtu.be/KgnlRVRCpkM
