Add Trustees July 6 Code Review

--- a/videos.yaml
+++ b/videos.yaml
@@ -26,3 +26,4 @@ Code Review Workshop June 11, 2019: https://youtu.be/UEJBjPktcRs
 Comp Plan Public Meeting June 24, 2019: https://youtu.be/xyq34-TlhTQ
 Trustees Special & Board Meeting June 25, 2019: https://youtu.be/1cu1YqGeQYo
 Trustees Meeting July 2, 2019: https://youtu.be/KgnlRVRCpkM
+Trustees Code Review July 6, 2019: https://youtu.be/WK3L1M8_hBU
