Add July 31 Trustees meeting

--- a/videos.yaml
+++ b/videos.yaml
@@ -27,6 +27,7 @@ Comp Plan Public Meeting June 24, 2019: https://youtu.be/xyq34-TlhTQ
 Trustees Special & Board Meeting June 25, 2019: https://youtu.be/1cu1YqGeQYo
 Trustees Meeting July 2, 2019: https://youtu.be/KgnlRVRCpkM
 Trustees Code Review July 6, 2019: https://youtu.be/WK3L1M8_hBU
-Trustees Meeting July 9, 2019: https://youtu.be/BpKLVk-Rf34
+Trustees Code Review Workshop July 9, 2019: https://youtu.be/BpKLVk-Rf34
 Trustees Code Review July 11, 2019: https://youtu.be/HjdGF0XARJ8
 Trustees Review Meeting July 23, 2019: https://youtu.be/i-RbLok2sY0
+Trustees Code Review July 31, 2019: https://youtu.be/37esaPF2JZw
