--- a/videos.yaml
+++ b/videos.yaml
@@ -31,3 +31,5 @@ Trustees Code Review Workshop July 9, 2019: https://youtu.be/BpKLVk-Rf34
 Trustees Code Review July 11, 2019: https://youtu.be/HjdGF0XARJ8
 Trustees Review Meeting July 23, 2019: https://youtu.be/i-RbLok2sY0
 Trustees Code Review July 31, 2019: https://youtu.be/37esaPF2JZw
+Trustees Code Review August 13, 2019: https://youtu.be/F2l0pJIY67s
+Trustees Meeting September 10, 2019: https://youtu.be/NYMjztHPOnc
