Add Sept 17 mtg

--- a/videos.yaml
+++ b/videos.yaml
@@ -33,3 +33,4 @@ Trustees Review Meeting July 23, 2019: https://youtu.be/i-RbLok2sY0
 Trustees Code Review July 31, 2019: https://youtu.be/37esaPF2JZw
 Trustees Code Review August 13, 2019: https://youtu.be/F2l0pJIY67s
 Trustees Meeting September 10, 2019: https://youtu.be/NYMjztHPOnc
+Trustees and PZBA Joint Meeting September 17, 2019: https://youtu.be/8boD9nl7its
