--- a/videos.yaml
+++ b/videos.yaml
@@ -35,3 +35,5 @@ Trustees Code Review August 13, 2019: https://youtu.be/F2l0pJIY67s
 Trustees Meeting September 10, 2019: https://youtu.be/NYMjztHPOnc
 Trustees and PZBA Joint Meeting September 17, 2019: https://youtu.be/8boD9nl7its
 Trustees Meeting September 24, 2019: https://youtu.be/Hfu2f5rkHVg
+Trustees Code Review October 8, 2019: https://youtu.be/-udkaWaNUYQ
+Trustees Meeting October 8, 2019: https://youtu.be/mmUo277FYBo
