Add Dec 10 meeting

--- a/videos.yaml
+++ b/videos.yaml
@@ -37,3 +37,4 @@ Trustees and PZBA Joint Meeting September 17, 2019: https://youtu.be/8boD9nl7its
 Trustees Meeting September 24, 2019: https://youtu.be/Hfu2f5rkHVg
 Trustees Code Review October 8, 2019: https://youtu.be/-udkaWaNUYQ
 Trustees Meeting October 8, 2019: https://youtu.be/mmUo277FYBo
+Trustees Meeting December 10, 2019: https://youtu.be/DBcNOHQtzIw
