--- a/videos.yaml
+++ b/videos.yaml
@@ -38,3 +38,4 @@ Trustees Meeting September 24, 2019: https://youtu.be/Hfu2f5rkHVg
 Trustees Code Review October 8, 2019: https://youtu.be/-udkaWaNUYQ
 Trustees Meeting October 8, 2019: https://youtu.be/mmUo277FYBo
 Trustees Meeting December 10, 2019: https://youtu.be/DBcNOHQtzIw
+Trustees Meeting January 14, 2020: https://youtu.be/_1F-mdPsOS8
