--- a/videos.yaml
+++ b/videos.yaml
@@ -39,3 +39,4 @@ Trustees Code Review October 8, 2019: https://youtu.be/-udkaWaNUYQ
 Trustees Meeting October 8, 2019: https://youtu.be/mmUo277FYBo
 Trustees Meeting December 10, 2019: https://youtu.be/DBcNOHQtzIw
 Trustees Meeting January 14, 2020: https://youtu.be/_1F-mdPsOS8
+Trustees Meeting January 28, 2020: https://youtu.be/civlzxJrFog
