Add February 25 videos

--- a/videos.yaml
+++ b/videos.yaml
@@ -42,3 +42,5 @@ Trustees Meeting January 14, 2020: https://youtu.be/_1F-mdPsOS8
 Trustees Meeting January 28, 2020: https://youtu.be/civlzxJrFog
 Trustees Budget Meeting February 11, 2020: https://youtu.be/rEc0YJdBOFM
 Trustees Meeting February 11, 2020: https://youtu.be/QMuFLbMrwao
+Trustees Budget Meeting February 25, 2020: https://youtu.be/prjJFP64_J0
+Trustees Meeting February 25, 2020: https://youtu.be/cCxEi8JcDfA
