Add March 5 budget video

--- a/videos.yaml
+++ b/videos.yaml
@@ -44,3 +44,4 @@ Trustees Budget Meeting February 11, 2020: https://youtu.be/rEc0YJdBOFM
 Trustees Meeting February 11, 2020: https://youtu.be/QMuFLbMrwao
 Trustees Budget Meeting February 25, 2020: https://youtu.be/prjJFP64_J0
 Trustees Meeting February 25, 2020: https://youtu.be/cCxEi8JcDfA
+Trustees Budget Meeting March 5, 2020: https://youtu.be/5yt72kd_oCU
