--- a/videos.yaml
+++ b/videos.yaml
@@ -45,3 +45,5 @@ Trustees Meeting February 11, 2020: https://youtu.be/QMuFLbMrwao
 Trustees Budget Meeting February 25, 2020: https://youtu.be/prjJFP64_J0
 Trustees Meeting February 25, 2020: https://youtu.be/cCxEi8JcDfA
 Trustees Budget Meeting March 5, 2020: https://youtu.be/5yt72kd_oCU
+Trustees Budget Meeting March 10, 2020: https://youtu.be/0XnyrvUSdyU
+Trustees Meeting March 10, 2020: https://youtu.be/enBW2JvFj2M
