Add March 17 budget meeting

--- a/videos.yaml
+++ b/videos.yaml
@@ -47,3 +47,4 @@ Trustees Meeting February 25, 2020: https://youtu.be/cCxEi8JcDfA
 Trustees Budget Meeting March 5, 2020: https://youtu.be/5yt72kd_oCU
 Trustees Budget Meeting March 10, 2020: https://youtu.be/0XnyrvUSdyU
 Trustees Meeting March 10, 2020: https://youtu.be/enBW2JvFj2M
+Trustees Budget Meeting March 17, 2020: https://youtu.be/hOu-SNYa9kk
