--- a/videos.yaml
+++ b/videos.yaml
@@ -48,3 +48,4 @@ Trustees Budget Meeting March 5, 2020: https://youtu.be/5yt72kd_oCU
 Trustees Budget Meeting March 10, 2020: https://youtu.be/0XnyrvUSdyU
 Trustees Meeting March 10, 2020: https://youtu.be/enBW2JvFj2M
 Trustees Budget Meeting March 17, 2020: https://youtu.be/hOu-SNYa9kk
+Trustees Budget Meeting April 16, 2020: https://youtu.be/-BqwmluBNjE
