Add April 23 video

--- a/videos.yaml
+++ b/videos.yaml
@@ -49,3 +49,4 @@ Trustees Budget Meeting March 10, 2020: https://youtu.be/0XnyrvUSdyU
 Trustees Meeting March 10, 2020: https://youtu.be/enBW2JvFj2M
 Trustees Budget Meeting March 17, 2020: https://youtu.be/hOu-SNYa9kk
 Trustees Budget Meeting April 16, 2020: https://youtu.be/-BqwmluBNjE
+Trustees Budget Meeting April 23, 2020: https://youtu.be/iBCH9x5o07A
