Add May 12 meeting

--- a/videos.yaml
+++ b/videos.yaml
@@ -51,3 +51,4 @@ Trustees Budget Meeting March 17, 2020: https://youtu.be/hOu-SNYa9kk
 Trustees Budget Meeting April 16, 2020: https://youtu.be/-BqwmluBNjE
 Trustees Budget Meeting April 23, 2020: https://youtu.be/iBCH9x5o07A
 Trustees Budget Meeting April 28, 2020: https://youtu.be/c8J8hnl9rP4
+Trustees Meeting May 12, 2020: https://youtu.be/jIteDb0lO9s
