Add May 19 meeting

--- a/videos.yaml
+++ b/videos.yaml
@@ -52,3 +52,4 @@ Trustees Budget Meeting April 16, 2020: https://youtu.be/-BqwmluBNjE
 Trustees Budget Meeting April 23, 2020: https://youtu.be/iBCH9x5o07A
 Trustees Budget Meeting April 28, 2020: https://youtu.be/c8J8hnl9rP4
 Trustees Meeting May 12, 2020: https://youtu.be/jIteDb0lO9s
+Trustees Special Meeting May 19, 2020: https://pittsford-village.s3.amazonaws.com/Trustees+Special+Meeting+May+19%2C+2020+Trimmed.wav
